--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"@crawlee/puppeteer": "^3.15.3",
 		"apify": "^3.5.2",
 		"crawlee": "^3.15.3",
-		"puppeteer": "^24.32.1",
+		"puppeteer": "24.32.1",
 		"sanitize-html": "^2.17.0",
+		"twitter-api-v2": "^1.28.0",
 		"youtube-transcript": "^1.2.1",
 		"ytdl-core": "^4.11.5"
 	},
